Starts on the python implementation
